--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-maps": "^0.12.4",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0"
   },
